src/objects/JobPosting__c.object
<CustomObject>
    <fields>
        <fullName>PositionJunc__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>JobPostings</relationshipLabel>
        <relationshipName>JobPostings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <externalId>true</externalId>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>WebsitePost__c</fullName>
        <label>Website</label>
        <referenceTo>Website__c</referenceTo>
        <relationshipLabel>JobPostings</relationshipLabel>
        <relationshipName>JobPostings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>JobPosting</label>
    <nameField>
        <label>JobPosting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobPostings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>